--- a/life-events/theme-life-events.html
+++ b/life-events/theme-life-events.html
@@ -197,11 +197,14 @@ if (/^((?!chrome|android).)*safari/i.test(navigator.userAgent)) {
 	<div class="container">
 		<h2>Most requested</h2>
 		<ul>
-			<li><a href="#">Canadian Retirement Income Calculator</a></li>
-			<li><a href="#">Notify of a death</a></li>
-			<li><a href="#">Canada child benefit</a></li>
-			<li><a href="#">Employment Insurance benefits and leave</a></li>
-			<li><a href="#">Improving your credit score</a></li>
+			<li><a href="https://www.canada.ca/en/government/sign-in-online-account.html">Sign into a Government of Canada account</a></li>
+			<li><a href="https://www.canada.ca/en/services/benefits/publicpensions/cpp/payment-amounts.html">CPP payment amounts</a></li>
+			<li><a href="https://www.canada.ca/en/services/benefits/calendar.html">Benefits payment dates</a></li>
+			<li><a href="https://www.canada.ca/en/revenue-agency/services/child-family-benefits/canada-child-benefit-overview.html">Canada child benefit</a></li>
+			<li><a href="https://www.canada.ca/en/services/benefits/publicpensions/cpp/retirement-income-calculator.html">Canadian Retirement Income Calculator</a></li>
+			<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/life-events/doing-taxes-someone-died.html">Prepare tax returns for someone who died</a></li>
+			<li><a href="https://www.canada.ca/en/services/child/register-birth.html#h2.2">Get a birth certificate</a></li>
+			<li><a href="https://www.canada.ca/en/employment-social-development/services/sin.html">Apply for a SIN</a></li>
 		</ul>
 	</div>
 </section>
@@ -225,13 +228,14 @@ if (/^((?!chrome|android).)*safari/i.test(navigator.userAgent)) {
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p> 
 		</div>-->
 		<div class="col-lg-4 col-md-6">
-			<h3><a href="#">Learn and plan for your retirement</a></h3>
+			<h3><a href="https://www.canada.ca/en/services/child.html">Welcoming a child</a></h3>
+			<p>Becoming a parent, financial support, leave options, register your child's birth, childcare and education savings, health and wellness</p>
+		</div>
+		<div class="col-lg-4 col-md-6">
+			<h3><a href="https://www.canada.ca/en/services/retirement.html">Learn and plan for your retirement</a></h3>
 			<p>Retirement options and tips, public pensions, Canada Pension Plan (CPP), Old Age Security (OAS), Guaranteed Income Supplement (GIS), when to retire</p>
 		</div><div class="col-lg-4 col-md-6">
-			<h3><a href="#">Welcoming a child</a></h3>
-			<p>Becoming a parent, financial support, leave options, register your child's birth, childcare and education savings, health and wellness</p>
-		</div><div class="col-lg-4 col-md-6">
-			<h3><a href="#">What to do when someone dies</a></h3>
+			<h3><a href="https://www.canada.ca/en/services/death.html">What to do when someone dies</a></h3>
 			<p>What to do, who to inform, preparing for end of life, representing someone who died, apply or make changes to benefits</p>
 		</div>
 	</div>
