--- a/life-events/theme-life-events.html
+++ b/life-events/theme-life-events.html
@@ -190,7 +190,7 @@ if (/^((?!chrome|android).)*safari/i.test(navigator.userAgent)) {
 <div class="container">
 	<div class="row">
 		<div class="col-md-8"><h1 property="name" id="wb-cont">Manage life events</h1>
-			<p>Find resources and support to help navigate life’s transitions. Includes, planning for retirement, welcoming a child and what to do when someone dies.</p>
+			<p>Benefits and resources to help navigate life's biggest transitions. Welcoming a child, planning for retirement and handling end-of-life matters.</p>
 		</div>
 	</div>
 </div><section class="gc-most-requested">
