--- a/life-events/layered-theme-life-events.html
+++ b/life-events/layered-theme-life-events.html
@@ -8,9 +8,9 @@
 <meta content="width=device-width, initial-scale=1" name="viewport">
 <meta name="description" content=" " />
 <meta name="author" content=" "/>
-<meta name="dcterms.title" content="[Theme]"/>
-<meta name="dcterms.description" content=" "/>
-<meta name="dcterms.creator" content=" "/>
+<meta name="dcterms.title" content="Manage life events: Welcoming a child, retirement, what to do when someone dies"/>
+<meta name="dcterms.description" content="Find support for life events: welcoming a child, retirement planning, and handling affairs after a death. Get guidance on benefits, services, and next steps."/>
+<meta name="dcterms.creator" content=""/>
 <meta name="dcterms.language" content="eng"/>
 <meta name="dcterms.subject" content=""/>
 <meta name="dcterms.issued" content=""/>
