--- a/life-events/theme-life-events.html
+++ b/life-events/theme-life-events.html
@@ -229,7 +229,7 @@ if (/^((?!chrome|android).)*safari/i.test(navigator.userAgent)) {
 		</div>-->
 		<div class="col-lg-4 col-md-6">
 			<h3><a href="https://www.canada.ca/en/services/child.html">Welcoming a child</a></h3>
-			<p>Becoming a parent, financial support, leave options, register your child's birth, childcare and education savings, health and wellness</p>
+			<p>Becoming a parent, financial support, leave options, register your child's birth, childcare, education savings, health and wellness</p>
 		</div>
 		<div class="col-lg-4 col-md-6">
 			<h3><a href="https://www.canada.ca/en/services/retirement.html">Learn and plan for your retirement</a></h3>
