--- a/choose-canada/choose-canada-img-demo.html
+++ b/choose-canada/choose-canada-img-demo.html
@@ -271,7 +271,7 @@
 
 
 
-        <div class="bg-cover" data-bgimg-srcset="/images/1920x315.png 1920w, /content/dam/canada/homepage-bg/bkg-home-banner-winter-2024-lg-1200x315.jpg 1200w, /content/dam/canada/homepage-bg/bkg-home-banner-winter-2024-md-992x298.jpg 992w, https://wet-boew.github.io/vocab/wb/utilities#no-image 767w">
+        <div class="bg-cover" data-bgimg-srcset="/images/1920x315.png 1920w, /images/1200x315.png 1200w, /images-992x298.png 992w, https://wet-boew.github.io/vocab/wb/utilities#no-image 767w">
         <div class="container p-0 p-sm-3">
             <div class="well header-rwd brdr-0 brdr-rds-0 text-white">
                 <h1 property="name" id="wb-cont">Choose Canada.ca</h1>
