--- a/choose-canada/choose-canada-img-demo.html
+++ b/choose-canada/choose-canada-img-demo.html
@@ -267,23 +267,81 @@
             </div>
 
             </div> -->
-    <div class="mwsgeneric-base-html parbase section">
 
 
+            <style>
+.bg-cover {
+  position: relative;
+  background-image: url('./images/1920x315.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 
-        <div class="bg-cover" data-bgimg-srcset="./images/1920x315.png 1920w, ./images/1200x315.png 1200w, ./images-992x298.png 992w, https://wet-boew.github.io/vocab/wb/utilities#no-image 767w">
-        <div class="container p-0 p-sm-3">
-            <div class="well header-rwd brdr-0 brdr-rds-0 text-white">
-                <h1 property="name" id="wb-cont">Choose Canada.ca</h1>
-                <p class="mrgn-tp-md">Be your most flag-flying, maple-leaf buying, local-adventuring self.</p>
+.container {
+  position: relative;
+}
 
-                <p>It’s time to choose Canada!</p>
-            </div>
+.header-rwd {
+  position: relative;
+  width: 33%;
+  background-image: linear-gradient(to right, #BB1119, #8c0d13);
+  padding: 15px;
+  margin-bottom: 0;
+  box-shadow: none;
+  border: 0;
+  border-radius: 0;
+  color: white;
+}
+
+/* Extend red background to the left edge */
+.header-rwd::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 100%;
+  bottom: 0;
+  width: 9999px;
+  background-image: linear-gradient(to right, #8c0d13, #BB1119);
+}
+
+.header-rwd h1 {
+  position: relative;
+  margin-top: 10px !important;
+  padding-bottom: 0.18em;
+  border-bottom: none !important;
+}
+
+.header-rwd h1::after {
+  content: "";
+  position: absolute;
+  bottom: -.15em;
+  left: 0;
+  width: 100%;
+  height: 0.18em;
+  background-image: linear-gradient(to right, white 71px, transparent 0px);
+}
+
+/* Media query for mobile devices */
+@media (max-width: 767px) {
+  .bg-cover {
+    background-image: none !important;
+  }
+  
+  .header-rwd {
+    width: 100%;
+  }
+}
+          </style>
+ <div class="bg-cover">
+    <div class="container">
+        <div class="well header-rwd brdr-0 brdr-rds-0 text-white">
+            <h1 property="name" id="wb-cont">Choose Canada.ca</h1>
+            <p class="mrgn-tp-md">Be your most flag-flying, maple-leaf buying, local-adventuring self.</p>
+            <p>It's time to choose Canada!</p>
         </div>
     </div>
-    
-    
-    </div>
+</div>
 
 <div class="mwstitle section">
 
