--- a/choose-canada/choose-canada-img-demo-3.html
+++ b/choose-canada/choose-canada-img-demo-3.html
@@ -272,7 +272,7 @@
             <style>
 .bg-cover {
   position: relative;
-  background-image: url('./images/1920x315.png');
+  background-image: url('./images/1920x315-3.png');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -302,7 +302,7 @@
   right: 100%;
   bottom: 0;
   width: 9999px;
-  background-image: linear-gradient(to right, #BB1119, #8c0d13);
+  background-image: linear-gradient(to right,#BB1119, #8c0d13);
 }
 
 .header-rwd h1 {
