proto direct deposit

--- a/lana/canada.html
+++ b/lana/canada.html
@@ -117,35 +117,159 @@
       </div>
     </nav>
   </header>
-  <main role="main" property="mainContentOfPage" class="wb-prettify all-pre">
-    <div class="container">
-    <h1 property="name" class="wb-inv" id="wb-cont" dir="ltr">
-    General information by telephone</h1>
+  <main property="mainContentOfPage" resource="#wb-main" typeof="WebPageElement" class="container">
 
-    <div class="text">
-      <div class="row profile">
-        <div class="col-md-12">
-          <h1 property="name" id="wb-cont">General information by telephone</h1>
-        </div>
-      </div>
+             <div class="mwstitle section">
 
-    <div class="well">This is a well</div>
+     <h1 property="name" id="wb-cont" dir="ltr">
+ Change of address</h1>
 
 
 
-
-    </section></div>
-
-
-
-      </div>
-
-</div>
+ </div>
+ <div class="mwsgeneric-base-html parbase section">
 
 
 
+     <div class="row profile">
+   <div class="col-md-12">
+     <ul>
+       <li>Update your address with each government organization that provides services to you</li>
+ 	  <li>Address updates are not automatically shared across departments and agencies</li>
+     </ul>
+   </div>
+ </div>
+ <section>
+   <div class="row">
+     <div>
+       <section class="col-lg-12 col-md-12">
+         <h3>Most common service changes</h3>
+         <ul>
+           <li><a href="/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/change-your-address.html">Canada Revenue Agency (personal)</a> - personal taxes, tax credits, Canada Child Benefit</li>
+ 		  <li><a href="/en/revenue-agency/services/tax/businesses/topics/changes-your-business/change-address.html">Canada Revenue Agency (businesses)</a> - business taxes, payroll, <abbr title="Goods and Services Tax/Harmonized Sales Tax">GST/HST</abbr></li>
+           <li><a href="/en/employment-social-development/services/my-account/personal-information.html">Service Canada</a> - <abbr title="Employment Insurance">EI</abbr>, Canada Pension Plan, Old Age Security</li>
+           <li><a href="/en/immigration-refugees-citizenship/services/application/change-address.html" rel="external">Immigration, Refugees and Citizenship Canada</a> - for applications in process</li>
+           <li><a href="https://www.canada.ca/en/public-services-procurement/services/payments-to-from-government/direct-deposit.html">Sign up for direct deposit or update your banking information</a></li>
 
-    </div>
+         </ul>
+       </section>
+
+    
+
+
+     </div>
+   </div>
+ </section>
+ <section>
+   <div class="row profile">
+     <div class="col-md-12">
+       <h2 id="contact-table">Change an address with a department or agency</h2>
+       <p class="pagetag">Enter a department or service name to find their change of address instructions.</p>
+     </div>
+   </div>
+   <table class="wb-tables table" data-wb-tables="{ &quot;iDisplayLength&quot;: 20, &quot;bLengthChange&quot;: false, &quot;bInfo&quot;: false }">
+     <thead>
+       <tr>
+         <th>Services</th>
+         <th>Description</th>
+         <th>Department</th>
+       </tr>
+     </thead>
+     <tbody>
+       <tr>
+         <td><a href="/en/revenue-agency/services/tax/businesses/topics/changes-your-business/change-address.html">Taxes (businesses)</a></td>
+         <td>GST/HST, Payroll and other business taxes</td>
+         <td>Canada Revenue Agency (CRA)</td>
+       </tr>
+       <tr>
+         <td><a href="/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/change-your-address.html">Taxes (individuals)</a></td>
+         <td>Income tax status, RRSP and TFSA contributions, direct deposit of tax refunds</td>
+         <td>Canada Revenue Agency (CRA)</td>
+       </tr>
+       <tr>
+         <td><a href="/en/employment-social-development/services/my-account/personal-information.html">Employment Insurance (EI)</a></td>
+         <td>Employment  insurance (EI) direct deposit of benefit payments. If you are outside Canada <a href="/en/employment-social-development/corporate/contact.html">contact Service Canada</a></td>
+         <td>Service Canada (SC)</td>
+       </tr>
+       <tr>
+         <td><a href="/en/employment-social-development/services/my-account/personal-information.html">Canada Pension Plan (CPP) and Old Age Security (OAS)</a></td>
+         <td>Canada Pension Plan (CPP) and Old Age Security  (OAS) direct deposit of benefit payments. &nbsp;If you are outside Canada <a href="/en/employment-social-development/corporate/contact.html">contact Service Canada</a>.</td>
+         <td>Service Canada (SC)</td>
+       </tr>
+       <tr>
+         <td><a href="https://www.veterans.gc.ca/en/about-vac/resources/change-address" rel="external">Correspondence and benefits for Veterans</a></td>
+         <td>Disability pension, career transition, rehabilitation, caregiver relief and other veteran benefits</td>
+         <td>Veterans Affairs Canada (VAC)</td>
+       </tr>
+       <tr>
+         <td><a href="/en/immigration-refugees-citizenship/services/application/change-address.html">Immigration</a></td>
+         <td>Immigration, work permit, study permit, travel visa</td>
+         <td>Immigration, Refugees and Citizenship Canada (IRCC formerly CIC)</td>
+       </tr>
+       <tr>
+         <td><a href="https://rcmp.ca/en/firearms/individual-web-services" rel="external">Gun licence</a></td>
+         <td>For a firearms licence with the Canadian Firearms Program</td>
+         <td>Royal Canadian Mounted Police (RCMP)</td>
+       </tr>
+       <tr>
+         <td><a href="https://tc.canada.ca/en/aviation/change-address-aviation-related-services" rel="external">Aircraft or air traffic licence</a></td>
+         <td>For flight crews, air traffic controllers, aircraft maintenance engineers</td>
+         <td>Transport Canada (TC)</td>
+       </tr>
+       <tr>
+         <td><a href="https://www.pcl-pep.snbservices.ca/1001/pubweb/default.aspx?lang=en-CA" rel="external">Boat license</a></td>
+         <td>For your Pleasure Craft Licence</td>
+         <td>Transport Canada (TC)</td>
+       </tr>
+       <tr>
+         <td><a href="https://www.unclaimedproperties.bankofcanada.ca/app/resources-bond-owners" rel="external">Canada Savings Bonds Program</a></td>
+         <td>For bond owners</td>
+         <td>Bank of Canada</td>
+       </tr>
+       <tr>
+         <td><a href="https://ereg.elections.ca/en/ereg/index" rel="external">Voting registration</a></td>
+         <td>Update the address on your voter registration</td>
+         <td>Elections Canada (Elections)</td>
+       </tr>
+       <tr>
+         <td><a href="https://www.cbsa-asfc.gc.ca/services/travel-voyage/prog/nexus/centres-eng.html#a03" rel="external">NEXUS</a></td>
+         <td>Crossing the border into Canada and the United States</td>
+         <td>Canada Border Services Agency (CBSA)</td>
+       </tr>
+       <tr>
+         <td><a href="https://ised-isde.canada.ca/cc/lgcy/hm.html?locale=en_CA" rel="external">Corporations Canada</a></td>
+         <td>For correspondence with your incorporated business</td>
+         <td>Innovation, Science and Innovation Canada (ISED formerly IC)</td>
+       </tr>
+       <tr>
+         <td><a href="/en/public-services-procurement/services/pay-pension/pay-administration/access-update-pay-details/pay-changes-in-your-life/changing-your-personal-information.html#a2" rel="external">Public service pay</a></td>
+         <td>Pay and pension for public servants, particularly for direct deposit details</td>
+         <td>Public Services and Procurement Canada (PSPC)</td>
+       </tr>
+       <tr>
+         <td><a href="/en/employment-social-development/services/sin/after-applying.html">Social Insurance Number (SIN)</a></td>
+         <td>It is not necessary to inform us of a change of address unless you are waiting to receive a confirmation of SIN letter.</td>
+         <td>Service Canada (SC)</td>
+       </tr>
+       <tr>
+         <td><a href="/en/health-canada/services/health-cards.html">Health card</a></td>
+         <td>Health cards (also called Care Cards), are a provincial/territorial responsibility. It is your responsibility to inform your province/territory of a change of address.</td>
+         <td>Your province or territory</td>
+       </tr>
+       <tr>
+         <td><a href="/en/immigration-refugees-citizenship/services/new-immigrants/new-life-canada/driving.html">Driver's licence </a></td>
+         <td>Driving licences are a provincial/territorial responsibility. It is your responsibility to inform your province/territory of a change of address.</td>
+         <td>Your province or territory</td>
+       </tr>
+     </tbody>
+   </table>
+ </section>
+
+
+
+ </div>
+
+
     <!-- END PAGE FEEDBACK WIDGET -->
     <div class="pagedetails container">
 
