--- a/lana/contacts3.html
+++ b/lana/contacts3.html
@@ -154,14 +154,14 @@
                   <li><a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information.html">Taxes for Canadians and businesses</a> </li>
                   <li><a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information.html#tbl-international">International tax and non-resident enquiries</a></li>
                   <li><a href="https://www.canada.ca/en/employment-social-development/corporate/contact/sin.html">Social Insurance Number (<abbr>SIN</abbr>)</a></li>
-                  <li><mark><a href="https://www.canada.ca/en/public-services-procurement/services/payments-to-from-government/direct-deposit.html">Direct deposit and banking details</a></mark></li>
+                  <li><a href="https://www.canada.ca/en/public-services-procurement/services/payments-to-from-government/direct-deposit.html">Direct deposit and banking details</a></li>
 
                 </ul>
               </section>
               <section class="col-lg-4 col-md-6">
                 <h3>Immigration and travel</h3>
                 <ul class="list-unstyled lst-spcd">
-                  <li><a href="https://www.canada.ca/en/immigration-refugees-citizenship/corporate/contact-ircc.html"><mark>eTAs</abbr>, visas, permits, permanent residence, immigration </mark></a></li>
+                  <li><a href="https://www.canada.ca/en/immigration-refugees-citizenship/corporate/contact-ircc.html">eTAs</abbr>, visas, permits, permanent residence, immigration</a></li>
                   <li><a href="http://www.cbsa-asfc.gc.ca/contact/bis-sif-eng.html">Crossing the border</a></li>
                   <li><a href="https://travel.gc.ca/assistance">Travel assistance abroad for Canadians</a></li>
                   <li><a href="https://www.canada.ca/en/immigration-refugees-citizenship/services/canadian-passports/contact-passport-program.html">Passports for Canadians</a></li>
@@ -196,12 +196,12 @@
 
 
             <section class="col-lg-4 col-md-6">
-                            <h3><mark>Changing your address</mark></h3>
+                            <h3><mark>Change your address or banking information</mark></h3>
 
-                            <p>Find the services that you need to update:</p>
-                            <a href="/en/government/change-address.html" class="btn btn-primary" role="button">Change your address</a>
-
-
+                              <ul class="list-unstyled lst-spcd">
+                                <li><a href="/en/government/change-address.html">Change your address</a></li>
+<li><a href="https://www.canada.ca/en/public-services-procurement/services/payments-to-from-government/direct-deposit.html">Sign up for direct deposit update your banking information</a></li>
+</ul>
 
                           </section>
 
@@ -226,7 +226,7 @@
         <section>
           <div class="row">
             <div class="col-md-12">
-              <h2 id="contact-table"><mark>Find contacts by department or program</mark></h2>
+              <h2 id="contact-table">Find contacts by department or program</h2>
               <p class="pagetag">Find a contact or program to get help with your specific case. </p>
 
             </div>
@@ -353,7 +353,7 @@
                 <td></td>
               </tr>
               <tr>
-                <td><a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information.html">Canada Revenue Agency</a><mark>(Tax, GST/HST)</mark></td>
+                <td><a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information.html">Canada Revenue Agency</a>(Tax, GST/HST)</td>
                 <td>CRA</td>
               </tr>
               <tr>
@@ -689,7 +689,7 @@
                 <td>IRB</td>
               </tr>
               <tr>
-                <td><a href="http://www.cic.gc.ca/english/contacts/index.asp">Immigration, Refugees and Citizenship Canada</a><mark> (eTA, visa)</mark></td>
+                <td><a href="http://www.cic.gc.ca/english/contacts/index.asp">Immigration, Refugees and Citizenship Canada</a> (eTA, visa)</td>
                 <td>IRCC</td>
               </tr>
 
@@ -871,7 +871,7 @@
 
 
               <tr>
-                <td><mark><a href="https://www.canada.ca/en/immigration-refugees-citizenship/services/canadian-passports/contact-passport-program.html">Passport Program</a></mark></td>
+                <td><a href="https://www.canada.ca/en/immigration-refugees-citizenship/services/canadian-passports/contact-passport-program.html">Passport Program</a></td>
                 <td></td>
               </tr>
 
@@ -986,8 +986,8 @@
               </tr>
 
               <tr>
-                <td><mark><a href="https://www.canada.ca/en/employment-social-development/corporate/contact/sin.html">Social Insurance Number</a></td>
-                <td>SIN</mark></td>
+                <td><a href="https://www.canada.ca/en/employment-social-development/corporate/contact/sin.html">Social Insurance Number</a></td>
+                <td>SIN</td>
               </tr>
 
               <tr>
