--- a/lana/contacts3.html
+++ b/lana/contacts3.html
@@ -200,7 +200,7 @@
 
                               <ul class="list-unstyled lst-spcd">
                                 <li><a href="/en/government/change-address.html">Change your address</a></li>
-<li><a href="https://www.canada.ca/en/public-services-procurement/services/payments-to-from-government/direct-deposit.html">Sign up for direct deposit update your banking information</a></li>
+<li><a href="https://www.canada.ca/en/public-services-procurement/services/payments-to-from-government/direct-deposit.html">Sign up for direct deposit or update your banking information</a></li>
 </ul>
 
                           </section>
