--- a/choose-canada/choose-canada-img-demo-2.html
+++ b/choose-canada/choose-canada-img-demo-2.html
@@ -327,6 +327,10 @@
   .header-rwd {
     width: 100%;
   }
+  .bg-cover {
+    background-image: none; /* Removes the background image on mobile */
+    background-color: #BB1119;
+  }
 }
           </style>
  <div class="bg-cover">
