--- a/choose-canada/choose-canada-img-demo.html
+++ b/choose-canada/choose-canada-img-demo.html
@@ -323,9 +323,13 @@
 }
 
 /* Media query for mobile devices */
-@media (max-width: 767px) { 
+@media (max-width: 767px) {
   .header-rwd {
     width: 100%;
+  }
+  .bg-cover {
+    background-image: none; /* Removes the background image on mobile */
+    background-color: #BB1119;
   }
 }
           </style>
