--- a/choose-canada/choose-canada-img-demo-2.html
+++ b/choose-canada/choose-canada-img-demo-2.html
@@ -272,7 +272,7 @@
             <style>
 .bg-cover {
   position: relative;
-  background-image: url('./images/1920x315-2.png');
+  background-image: url('./images/1920x315-2.jpg');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
