--- a/jmtesting/ILP-secretaries-of-state/ILP-sos.html
+++ b/jmtesting/ILP-secretaries-of-state/ILP-sos.html
@@ -280,7 +280,7 @@
 		</div>
 	</section>
 		<section class="gc-minister">
-	<h2>Secretaries of State</h2>
+	<h2>Secretary(ies) of State</h2>
 	<div class="row wb-eqht-grd">
 		<div class="col-xs-12 col-md-6">
 			<div class="row">
@@ -288,7 +288,7 @@
 					<h3><a href="#">[Secretary of State name]</a></h3>
 				</div>
 				<div class="col-xs-12 col-md-5">
-					<img src="https://dummyimage.com/200x250/000000/FFFFFF.png" alt="The Honourable [Minister name]">
+					<img src="https://dummyimage.com/200x250/000000/FFFFFF.png" alt="Secretary of State name">
 				</div>
 				<div class="col-xs-12 col-md-7">
 					<p>[Official title]</p>
@@ -305,7 +305,46 @@
 					<h3><a href="#">[Secretary of State name]</a></h3>
 				</div>
 				<div class="col-xs-12 col-md-5">
-					<img src="https://dummyimage.com/200x250/000000/FFFFFF.png" alt="The Honourable [Minister name]">
+					<img src="https://dummyimage.com/200x250/000000/FFFFFF.png" alt="Secretary of State name">
+				</div>
+				<div class="col-xs-12 col-md-7">
+					<p>[Official title]</p>
+					<ul>
+						<li><a href="">[Link optional]</a></li>
+						<li><a href="">[Link optional]</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+<section class="gc-minister">
+	<h2>Parliamentary secretary(ies)</h2>
+	<div class="row wb-eqht-grd">
+		<div class="col-xs-12 col-md-6">
+			<div class="row">
+				<div class="col-xs-12 col-md-7 pull-right">
+					<h3><a href="#">Parliamentary secretary</a></h3>
+				</div>
+				<div class="col-xs-12 col-md-5">
+					<img src="https://dummyimage.com/200x250/000000/FFFFFF.png" alt="Parliamentary secretary name">
+				</div>
+				<div class="col-xs-12 col-md-7">
+					<p>[Official title]</p>
+					<ul>
+						<li><a href="">[Link optional]</a></li>
+						<li><a href="">[Link optional]</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+		<div class="col-xs-12 col-md-6">
+			<div class="row">
+				<div class="col-xs-12 col-md-7 pull-right">
+					<h3><a href="#">Parliamentary secretary</a></h3>
+				</div>
+				<div class="col-xs-12 col-md-5">
+					<img src="https://dummyimage.com/200x250/000000/FFFFFF.png" alt="Parliamentary secretary name">
 				</div>
 				<div class="col-xs-12 col-md-7">
 					<p>[Official title]</p>
