--- a/jmtesting/ILP-secretaries-of-state/ILP-sos.html
+++ b/jmtesting/ILP-secretaries-of-state/ILP-sos.html
@@ -401,6 +401,8 @@
 
 </main>
 
+
+
 <footer id="wb-info">
 	<h2 class="wb-inv">About this site</h2>
 
@@ -430,7 +432,8 @@
 					<li><a href="https://www.canada.ca/en/services/science.html">Science and innovation</a></li>
 					<li><a href="https://www.canada.ca/en/services/indigenous-peoples.html">Indigenous Peoples</a></li>
 					<li><a href="https://www.canada.ca/en/services/veterans-military.html">Veterans and military</a></li>
-					<li><a href="https://www.canada.ca/en/services/youth.html">Youth</a></li></ul>
+					<li><a href="https://www.canada.ca/en/services/youth.html">Youth</a></li>
+					<li><a href="https://www.canada.ca/en/life-events.html">Manage life events</a></li></ul>
 			</nav>
 		</div>
 	</div>
@@ -451,6 +454,7 @@
 		</div>
 	</div>
 </footer>
+
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js" integrity="sha384-rY/jv8mMhqDabXSo+UCggqKtdmBfd3qC2/KvyTDNQ6PcUJXaxK1tMepoQda4g5vB" crossorigin="anonymous"></script>
 <script src="https://wet-boew.github.io/themes-dist/GCWeb/wet-boew/js/wet-boew.min.js"></script>
