--- a/jmtesting/ILP-secretaries-of-state/ILP-sos-fr.html
+++ b/jmtesting/ILP-secretaries-of-state/ILP-sos-fr.html
@@ -287,7 +287,7 @@
 		<div class="col-xs-12 col-md-6">
 			<div class="row">
 				<div class="col-xs-12 col-md-7 pull-right">
-					<h3><a href="#">[Secrétaire d'État prénom et nom de famille]</a></h3>
+					<h3><a href="#">L'honorable [prénom et nom de famille]</a></h3>
 				</div>
 				<div class="col-xs-12 col-md-5">
 					<img src="https://dummyimage.com/200x250/000000/FFFFFF.png" alt="Secrétaire d'État prénom et nom de famille">
@@ -304,7 +304,7 @@
 		<div class="col-xs-12 col-md-6">
 			<div class="row">
 				<div class="col-xs-12 col-md-7 pull-right">
-					<h3><a href="#">[Secrétaire d'État prénom et nom de famille]</a></h3>
+					<h3><a href="#">L'honorable [prénom et nom de famille]</a></h3>
 				</div>
 				<div class="col-xs-12 col-md-5">
 					<img src="https://dummyimage.com/200x250/000000/FFFFFF.png" alt="Secrétaire d'État prénom et nom de famille">
