--- a/jmtesting/ILP-secretaries-of-state/ILP-sos.html
+++ b/jmtesting/ILP-secretaries-of-state/ILP-sos.html
@@ -324,7 +324,7 @@
 		<div class="col-xs-12 col-md-6">
 			<div class="row">
 				<div class="col-xs-12 col-md-7 pull-right">
-					<h3><a href="#">Parliamentary secretary name</a></h3>
+					<h3><a href="#">[Parliamentary secretary name]</a></h3>
 				</div>
 				<div class="col-xs-12 col-md-5">
 					<img src="https://dummyimage.com/200x250/000000/FFFFFF.png" alt="Parliamentary secretary name">
@@ -341,7 +341,7 @@
 		<div class="col-xs-12 col-md-6">
 			<div class="row">
 				<div class="col-xs-12 col-md-7 pull-right">
-					<h3><a href="#">Parliamentary secretary name</a></h3>
+					<h3><a href="#">[Parliamentary secretary name]</a></h3>
 				</div>
 				<div class="col-xs-12 col-md-5">
 					<img src="https://dummyimage.com/200x250/000000/FFFFFF.png" alt="Parliamentary secretary name">
