--- a/jmtesting/ILP-secretaries-of-state/sm-imgs-adjustments/ILP-sos.html
+++ b/jmtesting/ILP-secretaries-of-state/sm-imgs-adjustments/ILP-sos.html
@@ -287,7 +287,7 @@
 				<div class="col-xs-12 col-md-7 pull-right">
 					<h3><a href="#">The Honourable [Secretary of State name]</a></h3>
 				</div>
-				<div class="col-xs-12 col-md-5 mrgn-tp-md mrgn-bttm-md">
+				<div class="col-xs-12 col-md-5 mrgn-tp-lg mrgn-bttm-md">
 					<img src="https://dummyimage.com/200x250/000000/FFFFFF.png" alt="Secretary of State name">
 				</div>
 				<div class="col-xs-12 col-md-7">
