--- a/jmtesting/ILP-secretaries-of-state/sm-imgs-adjustments/ILP-sos.html
+++ b/jmtesting/ILP-secretaries-of-state/sm-imgs-adjustments/ILP-sos.html
@@ -271,10 +271,6 @@
 				</div>
 				<div class="col-xs-12 col-md-7">
 					<p>[Official title]</p>
-					<ul>
-						<li><a href="">Mandate letter</a></li>
-						<li><a href="">Briefing book</a></li>
-					</ul>
 				</div>
 			</div>
 		</div>
@@ -287,15 +283,11 @@
 				<div class="col-xs-12 col-md-7 pull-right">
 					<h3><a href="#">The Honourable [Secretary of State name]</a></h3>
 				</div>
-				<div class="col-xs-12 col-md-5 mrgn-tp-lg mrgn-bttm-md">
+				<div class="col-xs-12 col-md-5 mrgn-tp-md mrgn-bttm-md">
 					<img src="https://dummyimage.com/200x250/000000/FFFFFF.png" alt="Secretary of State name">
 				</div>
-				<div class="col-xs-12 col-md-7">
+				<div class="col-xs-12 col-md-7 mrgn-tp-sm">
 					<p>[Official title]</p>
-					<ul>
-						<li><a href="">[Link optional]</a></li>
-						<li><a href="">[Link optional]</a></li>
-					</ul>
 				</div>
 			</div>
 		</div>
@@ -309,10 +301,6 @@
 				</div>
 				<div class="col-xs-12 col-md-7">
 					<p>[Official title]</p>
-					<ul>
-						<li><a href="">[Link optional]</a></li>
-						<li><a href="">[Link optional]</a></li>
-					</ul>
 				</div>
 			</div>
 		</div>
@@ -326,10 +314,6 @@
 				</div>
 				<div class="col-xs-12 col-md-7">
 					<p>[Official title]</p>
-					<ul>
-						<li><a href="">[Link optional]</a></li>
-						<li><a href="">[Link optional]</a></li>
-					</ul>
 				</div>
 			</div>
 		</div>
@@ -343,10 +327,6 @@
 				</div>
 				<div class="col-xs-12 col-md-7">
 					<p>[Official title]</p>
-					<ul>
-						<li><a href="">[Link optional]</a></li>
-						<li><a href="">[Link optional]</a></li>
-					</ul>
 				</div>
 			</div>
 		</div>
@@ -360,10 +340,6 @@
 				</div>
 				<div class="col-xs-12 col-md-7">
 					<p>[Official title]</p>
-					<ul>
-						<li><a href="">[Link optional]</a></li>
-						<li><a href="">[Link optional]</a></li>
-					</ul>
 				</div>
 			</div>
 		</div>
@@ -377,10 +353,6 @@
 				</div>
 				<div class="col-xs-12 col-md-7">
 					<p>[Official title]</p>
-					<ul>
-						<li><a href="">[Link optional]</a></li>
-						<li><a href="">[Link optional]</a></li>
-					</ul>
 				</div>
 			</div>
 		</div>
@@ -399,10 +371,6 @@
 				</div>
 				<div class="col-xs-12 col-md-7">
 					<p>[Official title]</p>
-					<ul>
-						<li><a href="">[Link optional]</a></li>
-						<li><a href="">[Link optional]</a></li>
-					</ul>
 				</div>
 			</div>
 		</div>
@@ -416,10 +384,6 @@
 				</div>
 				<div class="col-xs-12 col-md-7">
 					<p>[Official title]</p>
-					<ul>
-						<li><a href="">[Link optional]</a></li>
-						<li><a href="">[Link optional]</a></li>
-					</ul>
 				</div>
 			</div>
 		</div>
@@ -433,10 +397,6 @@
 				</div>
 				<div class="col-xs-12 col-md-7">
 					<p>[Official title]</p>
-					<ul>
-						<li><a href="">[Link optional]</a></li>
-						<li><a href="">[Link optional]</a></li>
-					</ul>
 				</div>
 			</div>
 		</div>
@@ -450,10 +410,6 @@
 				</div>
 				<div class="col-xs-12 col-md-7">
 					<p>[Official title]</p>
-					<ul>
-						<li><a href="">[Link optional]</a></li>
-						<li><a href="">[Link optional]</a></li>
-					</ul>
 				</div>
 			</div>
 		</div>
@@ -467,10 +423,6 @@
 				</div>
 				<div class="col-xs-12 col-md-7">
 					<p>[Official title]</p>
-					<ul>
-						<li><a href="">[Link optional]</a></li>
-						<li><a href="">[Link optional]</a></li>
-					</ul>
 				</div>
 			</div>
 		</div>
@@ -484,10 +436,6 @@
 				</div>
 				<div class="col-xs-12 col-md-7">
 					<p>[Official title]</p>
-					<ul>
-						<li><a href="">[Link optional]</a></li>
-						<li><a href="">[Link optional]</a></li>
-					</ul>
 				</div>
 			</div>
 		</div>
