--- a/jmtesting/ILP-secretaries-of-state/sm-imgs/ILP-sos-fr.html
+++ b/jmtesting/ILP-secretaries-of-state/sm-imgs/ILP-sos-fr.html
@@ -389,7 +389,7 @@
 	</div>
 </section>
 <section class="gc-minister">
-	<h2> Secrétaire(s) parlementaire</h2>
+	<h2> Secrétaire(s) parlementaire(s)</h2>
 	<div class="row wb-eqht-grd">
 		<div class="col-xs-12 col-md-4">
 			<div class="row">
