--- a/jmtesting/ILP-secretaries-of-state/sm-imgs/ILP-sos-fr-2.html
+++ b/jmtesting/ILP-secretaries-of-state/sm-imgs/ILP-sos-fr-2.html
@@ -289,7 +289,7 @@
 				<div class="col-xs-12 col-md-7 pull-right">
 					<h3><a href="#">L'honorable [prénom et nom de famille]</a></h3>
 				</div>
-				<div class="col-xs-12 col-md-5 mrgn-tp-lg mrgn-bttm-md">
+				<div class="col-xs-12 col-md-5">
 					<img src="https://dummyimage.com/200x250/000000/FFFFFF.png" alt="Secrétaire d'État prénom et nom de famille">
 				</div>
 				<div class="col-xs-12 col-md-7">
@@ -302,7 +302,7 @@
 				<div class="col-xs-12 col-md-7 pull-right">
 					<h3><a href="#">L'honorable [prénom et nom de famille]</a></h3>
 				</div>
-				<div class="col-xs-12 col-md-5 mrgn-tp-lg mrgn-bttm-md">
+				<div class="col-xs-12 col-md-5">
 					<img src="https://dummyimage.com/200x250/000000/FFFFFF.png" alt="Secrétaire d'État prénom et nom de famille">
 				</div>
 				<div class="col-xs-12 col-md-7">
@@ -315,7 +315,7 @@
 				<div class="col-xs-12 col-md-7 pull-right">
 					<h3><a href="#">L'honorable [prénom et nom de famille]</a></h3>
 				</div>
-				<div class="col-xs-12 col-md-5 mrgn-tp-lg mrgn-bttm-md">
+				<div class="col-xs-12 col-md-5">
 					<img src="https://dummyimage.com/200x250/000000/FFFFFF.png" alt="Secrétaire d'État prénom et nom de famille">
 				</div>
 				<div class="col-xs-12 col-md-7">
@@ -328,7 +328,7 @@
 				<div class="col-xs-12 col-md-7 pull-right">
 					<h3><a href="#">L'honorable [prénom et nom de famille]</a></h3>
 				</div>
-				<div class="col-xs-12 col-md-5 mrgn-tp-lg mrgn-bttm-md">
+				<div class="col-xs-12 col-md-5">
 					<img src="https://dummyimage.com/200x250/000000/FFFFFF.png" alt="Secrétaire d'État prénom et nom de famille">
 				</div>
 				<div class="col-xs-12 col-md-7">
@@ -341,7 +341,7 @@
 				<div class="col-xs-12 col-md-7 pull-right">
 					<h3><a href="#">L'honorable [prénom et nom de famille]</a></h3>
 				</div>
-				<div class="col-xs-12 col-md-5 mrgn-tp-lg mrgn-bttm-md">
+				<div class="col-xs-12 col-md-5">
 					<img src="https://dummyimage.com/200x250/000000/FFFFFF.png" alt="Secrétaire d'État prénom et nom de famille">
 				</div>
 				<div class="col-xs-12 col-md-7">
@@ -354,7 +354,7 @@
 				<div class="col-xs-12 col-md-7 pull-right">
 					<h3><a href="#">L'honorable [prénom et nom de famille]</a></h3>
 				</div>
-				<div class="col-xs-12 col-md-5 mrgn-tp-lg mrgn-bttm-md">
+				<div class="col-xs-12 col-md-5">
 					<img src="https://dummyimage.com/200x250/000000/FFFFFF.png" alt="Secrétaire d'État prénom et nom de famille">
 				</div>
 				<div class="col-xs-12 col-md-7">
@@ -372,7 +372,7 @@
 				<div class="col-xs-12 col-md-7 pull-right">
 					<h3><a href="#">[Secrétaire parlementaire prénom et nom de famille]</a></h3>
 				</div>
-				<div class="col-xs-12 col-md-5 mrgn-tp-lg mrgn-bttm-md">
+				<div class="col-xs-12 col-md-5">
 					<img src="https://dummyimage.com/200x250/000000/FFFFFF.png" alt="Secrétaire parlementaire prénom et nom de famille">
 				</div>
 				<div class="col-xs-12 col-md-7">
@@ -385,7 +385,7 @@
 				<div class="col-xs-12 col-md-7 pull-right">
 					<h3><a href="#">[Secrétaire parlementaire prénom et nom de famille]</a></h3>
 				</div>
-				<div class="col-xs-12 col-md-5 mrgn-tp-lg mrgn-bttm-md">
+				<div class="col-xs-12 col-md-5">
 					<img src="https://dummyimage.com/200x250/000000/FFFFFF.png" alt="Secrétaire parlementaire prénom et nom de famille">
 				</div>
 				<div class="col-xs-12 col-md-7">
@@ -398,7 +398,7 @@
 				<div class="col-xs-12 col-md-7 pull-right">
 					<h3><a href="#">[Secrétaire parlementaire prénom et nom de famille]</a></h3>
 				</div>
-				<div class="col-xs-12 col-md-5 mrgn-tp-lg mrgn-bttm-md">
+				<div class="col-xs-12 col-md-5">
 					<img src="https://dummyimage.com/200x250/000000/FFFFFF.png" alt="Secrétaire parlementaire prénom et nom de famille">
 				</div>
 				<div class="col-xs-12 col-md-7">
@@ -411,7 +411,7 @@
 				<div class="col-xs-12 col-md-7 pull-right">
 					<h3><a href="#">[Secrétaire parlementaire prénom et nom de famille]</a></h3>
 				</div>
-				<div class="col-xs-12 col-md-5 mrgn-tp-lg mrgn-bttm-md">
+				<div class="col-xs-12 col-md-5">
 					<img src="https://dummyimage.com/200x250/000000/FFFFFF.png" alt="Secrétaire parlementaire prénom et nom de famille">
 				</div>
 				<div class="col-xs-12 col-md-7">
@@ -424,7 +424,7 @@
 				<div class="col-xs-12 col-md-7 pull-right">
 					<h3><a href="#">[Secrétaire parlementaire prénom et nom de famille]</a></h3>
 				</div>
-				<div class="col-xs-12 col-md-5 mrgn-tp-lg mrgn-bttm-md">
+				<div class="col-xs-12 col-md-5">
 					<img src="https://dummyimage.com/200x250/000000/FFFFFF.png" alt="Secrétaire parlementaire prénom et nom de famille">
 				</div>
 				<div class="col-xs-12 col-md-7">
