--- a/jmtesting/ILP-secretaries-of-state/sm-imgs/ILP-sos-fr.html
+++ b/jmtesting/ILP-secretaries-of-state/sm-imgs/ILP-sos-fr.html
@@ -272,10 +272,6 @@
 				</div>
 				<div class="col-xs-12 col-md-7">
 					<p>[Titre officiel du ministre]</p>
-					<ul>
-						<li><a href="">Lettre de mandat</a></li>
-						<li><a href="">Dossier d'information</a></li>
-					</ul>
 				</div>
 			</div>
 		</div>
@@ -289,7 +285,7 @@
 				<div class="col-xs-12 col-md-7 pull-right">
 					<h3><a href="#">L'honorable [prénom et nom de famille]</a></h3>
 				</div>
-				<div class="col-xs-12 col-md-5 mrgn-tp-lg mrgn-bttm-md">
+				<div class="col-xs-12 col-md-5">
 					<img src="https://dummyimage.com/200x250/000000/FFFFFF.png" alt="Secrétaire d'État prénom et nom de famille">
 				</div>
 				<div class="col-xs-12 col-md-7">
@@ -302,7 +298,7 @@
 				<div class="col-xs-12 col-md-7 pull-right">
 					<h3><a href="#">L'honorable [prénom et nom de famille]</a></h3>
 				</div>
-				<div class="col-xs-12 col-md-5 mrgn-tp-lg mrgn-bttm-md">
+				<div class="col-xs-12 col-md-5">
 					<img src="https://dummyimage.com/200x250/000000/FFFFFF.png" alt="Secrétaire d'État prénom et nom de famille">
 				</div>
 				<div class="col-xs-12 col-md-7">
@@ -315,7 +311,7 @@
 				<div class="col-xs-12 col-md-7 pull-right">
 					<h3><a href="#">L'honorable [prénom et nom de famille]</a></h3>
 				</div>
-				<div class="col-xs-12 col-md-5 mrgn-tp-lg mrgn-bttm-md">
+				<div class="col-xs-12 col-md-5">
 					<img src="https://dummyimage.com/200x250/000000/FFFFFF.png" alt="Secrétaire d'État prénom et nom de famille">
 				</div>
 				<div class="col-xs-12 col-md-7">
@@ -328,7 +324,7 @@
 				<div class="col-xs-12 col-md-7 pull-right">
 					<h3><a href="#">L'honorable [prénom et nom de famille]</a></h3>
 				</div>
-				<div class="col-xs-12 col-md-5 mrgn-tp-lg mrgn-bttm-md">
+				<div class="col-xs-12 col-md-5">
 					<img src="https://dummyimage.com/200x250/000000/FFFFFF.png" alt="Secrétaire d'État prénom et nom de famille">
 				</div>
 				<div class="col-xs-12 col-md-7">
@@ -341,7 +337,7 @@
 				<div class="col-xs-12 col-md-7 pull-right">
 					<h3><a href="#">L'honorable [prénom et nom de famille]</a></h3>
 				</div>
-				<div class="col-xs-12 col-md-5 mrgn-tp-lg mrgn-bttm-md">
+				<div class="col-xs-12 col-md-5">
 					<img src="https://dummyimage.com/200x250/000000/FFFFFF.png" alt="Secrétaire d'État prénom et nom de famille">
 				</div>
 				<div class="col-xs-12 col-md-7">
@@ -354,7 +350,7 @@
 				<div class="col-xs-12 col-md-7 pull-right">
 					<h3><a href="#">L'honorable [prénom et nom de famille]</a></h3>
 				</div>
-				<div class="col-xs-12 col-md-5 mrgn-tp-lg mrgn-bttm-md">
+				<div class="col-xs-12 col-md-5">
 					<img src="https://dummyimage.com/200x250/000000/FFFFFF.png" alt="Secrétaire d'État prénom et nom de famille">
 				</div>
 				<div class="col-xs-12 col-md-7">
@@ -372,7 +368,7 @@
 				<div class="col-xs-12 col-md-7 pull-right">
 					<h3><a href="#">[Secrétaire parlementaire prénom et nom de famille]</a></h3>
 				</div>
-				<div class="col-xs-12 col-md-5 mrgn-tp-lg mrgn-bttm-md">
+				<div class="col-xs-12 col-md-5">
 					<img src="https://dummyimage.com/200x250/000000/FFFFFF.png" alt="Secrétaire parlementaire prénom et nom de famille">
 				</div>
 				<div class="col-xs-12 col-md-7">
@@ -385,7 +381,7 @@
 				<div class="col-xs-12 col-md-7 pull-right">
 					<h3><a href="#">[Secrétaire parlementaire prénom et nom de famille]</a></h3>
 				</div>
-				<div class="col-xs-12 col-md-5 mrgn-tp-lg mrgn-bttm-md">
+				<div class="col-xs-12 col-md-5">
 					<img src="https://dummyimage.com/200x250/000000/FFFFFF.png" alt="Secrétaire parlementaire prénom et nom de famille">
 				</div>
 				<div class="col-xs-12 col-md-7">
@@ -398,7 +394,7 @@
 				<div class="col-xs-12 col-md-7 pull-right">
 					<h3><a href="#">[Secrétaire parlementaire prénom et nom de famille]</a></h3>
 				</div>
-				<div class="col-xs-12 col-md-5 mrgn-tp-lg mrgn-bttm-md">
+				<div class="col-xs-12 col-md-5">
 					<img src="https://dummyimage.com/200x250/000000/FFFFFF.png" alt="Secrétaire parlementaire prénom et nom de famille">
 				</div>
 				<div class="col-xs-12 col-md-7">
@@ -411,7 +407,7 @@
 				<div class="col-xs-12 col-md-7 pull-right">
 					<h3><a href="#">[Secrétaire parlementaire prénom et nom de famille]</a></h3>
 				</div>
-				<div class="col-xs-12 col-md-5 mrgn-tp-lg mrgn-bttm-md">
+				<div class="col-xs-12 col-md-5">
 					<img src="https://dummyimage.com/200x250/000000/FFFFFF.png" alt="Secrétaire parlementaire prénom et nom de famille">
 				</div>
 				<div class="col-xs-12 col-md-7">
@@ -424,7 +420,7 @@
 				<div class="col-xs-12 col-md-7 pull-right">
 					<h3><a href="#">[Secrétaire parlementaire prénom et nom de famille]</a></h3>
 				</div>
-				<div class="col-xs-12 col-md-5 mrgn-tp-lg mrgn-bttm-md">
+				<div class="col-xs-12 col-md-5">
 					<img src="https://dummyimage.com/200x250/000000/FFFFFF.png" alt="Secrétaire parlementaire prénom et nom de famille">
 				</div>
 				<div class="col-xs-12 col-md-7">
