--- a/lana/pass-about.html
+++ b/lana/pass-about.html
@@ -138,10 +138,11 @@
 
 
 
-<h2 id="a">What's included in the Pass</h2>
+<h2 id="a"><mark>What's included in the Pass</mark></h2>
       <p>The <a href="/en/canadian-heritage/campaigns/canada-pass.html">Canada Strong Pass</a> celebrates what unites us—our shared experiences, natural wonders, and cultural richness.</p>
       <p>The Pass is about making it easier for everyone—especially youth and families—to explore Canada and celebrate what makes this country extraordinary.</p>
       <p>The Pass includes:</p>
+      <mark>Added anchor links</mark>
       <ul>
         <li><strong><a href="#a2">Parks Canada:</a></strong> Free admission for all visitors to national parks, national historic sites, and national marine conservation areas administered by Parks Canada and a 25% discount on camping fees.</li>
         <li><strong><a href="#a3">National museums and the Plains of Abraham Museum:</a></strong> Free admission for children and teens aged 17 and under and a 50% discount for young adults aged 18 to 24.</li>
